java-base-sample/src/main/java/sample/p2/Stepchild2.java
package sample.p2;

public class Stepchild2 {

    public void stepFun2() throws CloneNotSupportedException {
        Father father = new Father ();
//        father.grandFun ();
        father.faFun(); //error

    }
}
